--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ flex: 1;
 }
 
 
-@media only screen and (max-width: 568px) {
+@media (max-width: 550px) {
 body, .section-two {
     flex-direction: column;
 }
@@ -113,7 +113,6 @@ font-family: 'Courier New', Courier, monospace;
 font-weight: 300;
 text-transform: uppercase;
 letter-spacing: .1em;
-/* links can be made into decorative buttons*/
 display: block;
 text-decoration: none;
 background-color: #833;
